[package]
name = "hacky-arm"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "^0.2.10", features = ["full"] }
failure = "^0.1.6"
prost = "^0.6.1"
serde = { version = "^1.0.104", features = ["derive"] }
json5 = "^0.2.5"
opencv = { version = "^0.29.0", features = ["opencv-4", "contrib"] }
argh = "^0.1.3"
dobot = { path = "../dobot-rust" }
hacky-arm-common = { path = "../common" }
