[package]
name = "hacky-arm"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "^0.2.10", features = ["full"] }
failure = "^0.1.6"
prost = "^0.6.1"
serde = { version = "^1.0.104", features = ["derive"] }
json5 = "^0.2.5"
argh = "^0.1.3"
dobot = { path = "../dobot-rust" }
hacky-arm-common = { path = "../common" }
realsense-rust = { version = "^0.3.0", path = "../realsense-rust" }
image = "^0.23.0"
log = "^0.4.8"
futures = "^0.3.4"
imageproc = { git = "https://github.com/image-rs/imageproc.git" }
pretty_env_logger = "^0.4.0"
hacky-detection = { path = "../detection" }
ctrlc = "^3.1.4"
lazy_static = "^1.4.0"
nalgebra = "^0.20.0"
kiss3d = "^0.23.0"
crossbeam = "^0.7.3"
by_address = "^1.0.4"
itertools = "^0.9.0"
geo = "^0.12.2"
