[package]
name = "hacky-detection"
version = "0.1.0"
authors = ["yuanyuyuan <az6980522@gmail.com>"]
edition = "2018"

[dependencies]
hacky-arm-common = { path = "../common" }
argh = "^0.1.3"
failure = "^0.1.6"
serde = { version = "^1.0.104", features = ["derive"] }
serde_json = "^1.0.48"
log = "^0.4.8"
pretty_env_logger = "^0.4.0"
